--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2019 - 2021</p>
+            <p>August 2019 - June 2021</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
@@ -185,7 +185,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2016 - 2019</p>
+            <p>August 2016 - May 2019</p>
             <div class="h5">Diploma </div>
           </div>
         </div>
