fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Intern-Data Science</div>
-            <p>Developing Data Scienece web Apps using R programming in Shiny Framework.</p>
+            <p>Developing Data Science web Apps using R programming in Shiny Framework.</p>
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Intern-Software Development</div>
-            <p>Participated in summer Internship Program organised by RAIT developed Online Certificate Disttribution System along with my teammates.</p>
+            <p>Participated in summer Internship program organised by RAIT developed Online Certificate Distribution System along with my teammates.</p>
           </div>
         </div>
       </div>
