fixed internship description

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Intern-Data Science</div>
-            <p>Developing Data Science web Apps using R programming in Shiny Framework.</p>
+            <p>Worked on time series analysis of an wind Engineering web application.</p>
           </div>
         </div>
       </div>
