--- a/index.html
+++ b/index.html
@@ -152,12 +152,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Intern-Software Development</div>
-<<<<<<< HEAD
-            <p>Participated in summer Internship program organised by RAIT developed Online Certificate Distribution System along with my teammates.</p>
-=======
-            <p>Participated in summer Internship Program organised by RAIT developed Online Certificate Distribution System along with my teammates.</p>
->>>>>>> 0d65e4b8c366c2c0469d40d35b40d5d6f06aee39
-          </div>
+
+            <p>Participated in summer Internship program organised by RAIT developed Online Certificate Distribution System along with my teammates.</p>          </div>
         </div>
       </div>
     </div>
